      within the brush instead of just 25% of them.
      Albert Cahalan <albert@users.sf.net>
  
    * Magic blocks effect now gamma-aware and using all 16 (not just 4)
      source pixels.
      Albert Cahalan <albert@users.sf.net>

  * Text tool improvements:
    -----------------------
    * Attempts to pick up the system's fonts, too!
      Albert Cahalan <albert@users.sf.net>

    * Italic, bold and sizes are now controlled with separate buttons
      (similar to flip, mirror and sizes for Stamps).
      Albert Cahalan <albert@users.sf.net>

  * Improved support for varying image sizes:
    -----------------------------------------
    * Somewhat better treatment of wrong-sized images when loading them.
      It works well for typical kid drawings, as long as objects don't
      touch the edge of the screen. (the earth and sky -- and anything
      else at the edge -- get extended to fill the space) This could be
      better done with wavelets I think, or some vector-based notion of
      what lies at the edge of the screen. Starters, as usual, need work.
      Albert Cahalan <albert@users.sf.net>

    * Fixed display corruption in 'Open' dialog when saved images are
      from a larger display size.
      Albert Cahalan <albert@users.sf.net>

  * System-related improvements:
    ----------------------------
    * Added larger screen size support:
      1024x768, 1280x1024, 1400x1050, 1600x1200
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Arbitrary window sizes allowed (--XXXXxYYYY); useful for more modern
      displays (e.g., Mac monitors)
      Albert Cahalan <albert@users.sf.net>
  
    * Switched from using 16bpp display surfaces to 32bpp, to reduce
      discoloration. ("#define" options exist at the top of src/tuxpaint.c
      to choose which you want.)
      Albert Cahalan <albert@users.sourceforge.net>

    * Now uses "AUDIO_S16SYS" when initializing audio system
      (on Linux/Mac/BeOS); helps sound under Linux on Mac hardware.