@@ -16,13 +16,13 @@ version
 </h1>
 <h2>Options Documentation</h2>
 
-<p>Copyright 2004 by Bill Kendrick<br>
+<p>Copyright 2005 by Bill Kendrick<br>
 New Breed Software</p>
 
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>December 26, 2004</p>
+<p>January 3, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -226,6 +226,13 @@ New Breed Software</p>
 
     <p>This can help when Tux&nbsp;Paint is run on very slow computers,
     or displayed on a remote X-Window display.</p>
+  </dd>
+
+  <dt><code><b>nosysfonts=yes</b></code></dt>
+  <dd>
+    <p>This option prevents Tux&nbsp;Paint from attempting to load fonts
+    (for use in the <b>Text</b> tool) from your operating system.
+    It will only load the ones that come with Tux&nbsp;Paint.</p>
   </dd>
 
   <dt><code><b>nostamps=yes</b></code></dt>
@@ -627,6 +634,7 @@ New Breed Software</p>
     --nooutlines<br>
     --nostamps<br>
     --nostampcontrols<br>
+    --nosysfonts<br>
     --mirrorstamps<br>
     --keyboard<br>
     --savedir&nbsp;DIRECTORY<br>
@@ -658,6 +666,7 @@ New Breed Software</p>
     --outlines<br>
     --stamps<br>
     --stampcontrols<br>
+    --sysfonts<br>
     --dontmirrorstamps<br>
     --mouse<br>
     --saveoverask<br>
